# stark-anatomy

starkarts/: Cargo.toml
starkarts/proptest-regressions/plonky2/: goldilocks_elem.txt
starkarts/src/: ff.rs  lib.rs
starkarts/src/ff/: field.rs  field_elem.rs  mod.rs  polynomial.rs  scalar.rs  tutorial_field.rs  uint.rs
starkarts/src/fiat_shamir/: deser.rs  fiat_shamir.rs  merkle.rs  mod.rs  proofstream.rs  ser.rs
starkarts/src/fri/: commitment.rs  mod.rs  opening.rs  transcript.rs
starkarts/src/plonky2/: goldilocks_elem.rs  goldilocks_field.rs  mod.rs  poly.rs
starkarts/src/polynomial/: evaluation.rs  mod.rs  multi.rs  poly.rs
