[package]
name = "starkarts"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bigint = { version = "4.4.3", optional = true }
lazy_static = "1.4.0" 
sha3 = "0.10.0"
byteorder = "1.4.3"
blake2 = "0.10.0"

[dev-dependencies]
proptest = "1.0.0"

[features]
default = ["tutorial"]
tutorial = ["bigint"]
